yoshimi 1.5.M

2019-3-22 will
* Further adustments to suppress GCC7 warnings.
  Some global enums changed to cnast unsigned char.
  CmdInterface/helplist() changed to char.

2019-3-21 Will
* Bugfix: Insert effect part list out of step.
* Sorted out potential GCC7 build warnings.

2019-3-20 Will
* Dynfilter insert done for local changes.
  No idea how to set for patch loads :(

2019-3-19 Will
* Most effect warnings now correct.
  Still incorrect when loading :(
* All part warnings correct.
* Sys/Ins warnings done too.
  CLI not done though!
* BugFix: Error loading instrument effects.
  Preset and parameter in wrong order.

2019-3-18 Will
* More work on effect warnings.
  Still more to do
  CLI test messages in place

2019-3-17 Will
* Temporarily disalbled Hi Res LFO.
  It will change!

2019-3-16 Will
* Effect change recognises intstrument loads.
* BugFix: CLI distortion not seing preset change.
* Effect change sets now sets colour of field.
  Still some corner cases to correct.

2019-3-15 Will
* LFO conversion done
  but CLI/GUI entries need improvenment.
* Corrections in LFO conversions.
* Effect change warning in place
  but not yet exposed to GUI and CLI.

2019-3-14 Will
* Initial conversion of LFO speed toint32_t.

2019-3-12 Will
* Waveform window now warns of lower voice edit.
  Doesn't yet say which one!
* Voice and Modulator warnings done.

2019-3-10 Will
* BugFix: Limits default wrong on DynFilter.
  System/Insert volumes reversed.
* Set up label for lower voice oscillator warning.
  Not yet in use. Need to work out how.

2019-3-8 Will
* Small improvement to CLI 'list' command.

2019-3-4 Will.
* Updated docs.
* Set release as 1.5.10.2

2019-3-3 Will
* Applied mxml patch from Adam.
* Temporarily disabled startup instance control
  for bugfix release.
* BugFix: Instrument window not showing controls
  only first instance and called from bank window.

2019-3-2 Will
* Moved gzipped loading from XMLwrapper to FileMgr.